// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot Tests > Badge > renders default variant 1`] = `
<div>
  <span
    class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800 "
  >
    New
  </span>
</div>
`;

exports[`Snapshot Tests > Badge > renders destructive variant 1`] = `
<div>
  <span
    class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-red-100 text-red-800 "
  >
    Error
  </span>
</div>
`;

exports[`Snapshot Tests > Badge > renders outline variant 1`] = `
<div>
  <span
    class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium border border-gray-300 text-gray-800 bg-transparent "
  >
    Info
  </span>
</div>
`;

exports[`Snapshot Tests > Badge > renders secondary variant 1`] = `
<div>
  <span
    class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-gray-100 text-gray-800 "
  >
    Draft
  </span>
</div>
`;

exports[`Snapshot Tests > Button > renders default variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 shadow-lg hover:shadow-xl h-10 px-4 py-2"
  >
    Default
  </button>
</div>
`;

exports[`Snapshot Tests > Button > renders destructive variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-red-600 text-white hover:bg-red-700 shadow-lg hover:shadow-xl h-10 px-4 py-2"
  >
    Delete
  </button>
</div>
`;

exports[`Snapshot Tests > Button > renders disabled state 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 shadow-lg hover:shadow-xl h-10 px-4 py-2"
    disabled=""
  >
    Disabled
  </button>
</div>
`;

exports[`Snapshot Tests > Button > renders ghost variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-gray-100 hover:text-gray-900 dark:hover:bg-gray-700 dark:hover:text-white h-10 px-4 py-2"
  >
    Ghost
  </button>
</div>
`;

exports[`Snapshot Tests > Button > renders link variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-blue-600 underline-offset-4 hover:underline dark:text-blue-400 h-10 px-4 py-2"
  >
    Link
  </button>
</div>
`;

exports[`Snapshot Tests > Button > renders loading state 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 shadow-lg hover:shadow-xl h-10 px-4 py-2"
    disabled=""
  >
    <svg
      class="mr-2 h-4 w-4 animate-spin"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    Loading
  </button>
</div>
`;

exports[`Snapshot Tests > Button > renders outline variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-gray-300 bg-white text-gray-900 hover:bg-gray-50 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:hover:bg-gray-700 h-10 px-4 py-2"
  >
    Outline
  </button>
</div>
`;

exports[`Snapshot Tests > Button > renders secondary variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-gray-100 text-gray-900 hover:bg-gray-200 dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 h-10 px-4 py-2"
  >
    Secondary
  </button>
</div>
`;

exports[`Snapshot Tests > Card > renders full card with header, title, description, and content 1`] = `
<div>
  <div
    class="rounded-xl border border-gray-200 bg-white shadow-lg dark:border-gray-700 dark:bg-gray-800"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="font-semibold leading-none tracking-tight text-gray-900 dark:text-white"
      >
        My Card Title
      </h3>
      <p
        class="text-sm text-gray-600 dark:text-gray-400"
      >
        This is a description of the card.
      </p>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        Card body content goes here.
      </p>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests > Input > renders disabled input 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Locked field
    </label>
    <div
      class="relative"
    >
      <input
        class="flex h-11 w-full rounded-lg border border-gray-300 bg-white px-3 py-2 text-sm ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:ring-offset-gray-800 dark:placeholder:text-gray-400 dark:focus-visible:ring-blue-400"
        disabled=""
        placeholder="Cannot edit"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests > Input > renders input with error 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Email
    </label>
    <div
      class="relative"
    >
      <input
        class="flex h-11 w-full rounded-lg border bg-white px-3 py-2 text-sm ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:ring-offset-gray-800 dark:placeholder:text-gray-400 dark:focus-visible:ring-blue-400 border-red-500 focus-visible:ring-red-500"
        placeholder="Enter email"
      />
    </div>
    <p
      class="text-sm text-red-600 dark:text-red-400"
    >
      Email is required
    </p>
  </div>
</div>
`;

exports[`Snapshot Tests > Input > renders normal input 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Username
    </label>
    <div
      class="relative"
    >
      <input
        class="flex h-11 w-full rounded-lg border border-gray-300 bg-white px-3 py-2 text-sm ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:ring-offset-gray-800 dark:placeholder:text-gray-400 dark:focus-visible:ring-blue-400"
        placeholder="Enter username"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests > Progress > renders at 0% 1`] = `
<div>
  <div
    class="w-full "
  >
    <div
      class="w-full bg-gray-200 rounded-full h-2"
    >
      <div
        class="bg-blue-500 h-2 rounded-full transition-all duration-300 ease-out"
        style="width: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests > Progress > renders at 50% 1`] = `
<div>
  <div
    class="w-full "
  >
    <div
      class="w-full bg-gray-200 rounded-full h-2"
    >
      <div
        class="bg-blue-500 h-2 rounded-full transition-all duration-300 ease-out"
        style="width: 50%;"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests > Progress > renders at 100% 1`] = `
<div>
  <div
    class="w-full "
  >
    <div
      class="w-full bg-gray-200 rounded-full h-2"
    >
      <div
        class="bg-blue-500 h-2 rounded-full transition-all duration-300 ease-out"
        style="width: 100%;"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests > Progress > renders with label shown 1`] = `
<div>
  <div
    class="w-full "
  >
    <div
      class="flex justify-between text-sm mb-1"
    >
      <span>
        Progress
      </span>
      <span>
        75
        %
      </span>
    </div>
    <div
      class="w-full bg-gray-200 rounded-full h-2"
    >
      <div
        class="bg-blue-500 h-2 rounded-full transition-all duration-300 ease-out"
        style="width: 75%;"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests > Select > renders with options prop 1`] = `
<div>
  <div
    class="relative"
  >
    <select
      aria-label="Media type"
      class="w-full px-3 py-2 bg-white border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent pr-8 appearance-none cursor-pointer text-gray-900 dark:bg-gray-800 dark:border-gray-600 dark:text-white"
    >
      <option
        value="movie"
      >
        Movie
      </option>
      <option
        value="music"
      >
        Music
      </option>
      <option
        value="game"
      >
        Game
      </option>
    </select>
    <div
      class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
    >
      <svg
        class="h-4 w-4 text-gray-400"
        data-testid="mock-icon"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests > Switch > renders checked 1`] = `
<div>
  <button
    aria-checked="true"
    class="relative inline-flex h-6 w-11 items-center rounded-full transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 bg-blue-600 dark:bg-blue-500"
    role="switch"
    type="button"
  >
    <span
      class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-6"
    />
  </button>
</div>
`;

exports[`Snapshot Tests > Switch > renders unchecked 1`] = `
<div>
  <button
    aria-checked="false"
    class="relative inline-flex h-6 w-11 items-center rounded-full transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 bg-gray-200 dark:bg-gray-700"
    role="switch"
    type="button"
  >
    <span
      class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-1"
    />
  </button>
</div>
`;

exports[`Snapshot Tests Badge renders default variant 1`] = `
<div>
  <span
    class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800 "
  >
    New
  </span>
</div>
`;

exports[`Snapshot Tests Badge renders destructive variant 1`] = `
<div>
  <span
    class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-red-100 text-red-800 "
  >
    Error
  </span>
</div>
`;

exports[`Snapshot Tests Badge renders outline variant 1`] = `
<div>
  <span
    class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium border border-gray-300 text-gray-800 bg-transparent "
  >
    Info
  </span>
</div>
`;

exports[`Snapshot Tests Badge renders secondary variant 1`] = `
<div>
  <span
    class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-gray-100 text-gray-800 "
  >
    Draft
  </span>
</div>
`;

exports[`Snapshot Tests Button renders default variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 shadow-lg hover:shadow-xl h-10 px-4 py-2"
  >
    Default
  </button>
</div>
`;

exports[`Snapshot Tests Button renders destructive variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-red-600 text-white hover:bg-red-700 shadow-lg hover:shadow-xl h-10 px-4 py-2"
  >
    Delete
  </button>
</div>
`;

exports[`Snapshot Tests Button renders disabled state 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 shadow-lg hover:shadow-xl h-10 px-4 py-2"
    disabled=""
  >
    Disabled
  </button>
</div>
`;

exports[`Snapshot Tests Button renders ghost variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-gray-100 hover:text-gray-900 dark:hover:bg-gray-700 dark:hover:text-white h-10 px-4 py-2"
  >
    Ghost
  </button>
</div>
`;

exports[`Snapshot Tests Button renders link variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-blue-600 underline-offset-4 hover:underline dark:text-blue-400 h-10 px-4 py-2"
  >
    Link
  </button>
</div>
`;

exports[`Snapshot Tests Button renders loading state 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-blue-600 text-white hover:bg-blue-700 shadow-lg hover:shadow-xl h-10 px-4 py-2"
    disabled=""
  >
    <svg
      class="mr-2 h-4 w-4 animate-spin"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    Loading
  </button>
</div>
`;

exports[`Snapshot Tests Button renders outline variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-gray-300 bg-white text-gray-900 hover:bg-gray-50 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:hover:bg-gray-700 h-10 px-4 py-2"
  >
    Outline
  </button>
</div>
`;

exports[`Snapshot Tests Button renders secondary variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-gray-100 text-gray-900 hover:bg-gray-200 dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 h-10 px-4 py-2"
  >
    Secondary
  </button>
</div>
`;

exports[`Snapshot Tests Card renders full card with header, title, description, and content 1`] = `
<div>
  <div
    class="rounded-xl border border-gray-200 bg-white shadow-lg dark:border-gray-700 dark:bg-gray-800"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="font-semibold leading-none tracking-tight text-gray-900 dark:text-white"
      >
        My Card Title
      </h3>
      <p
        class="text-sm text-gray-600 dark:text-gray-400"
      >
        This is a description of the card.
      </p>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        Card body content goes here.
      </p>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Input renders disabled input 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Locked field
    </label>
    <div
      class="relative"
    >
      <input
        class="flex h-11 w-full rounded-lg border border-gray-300 bg-white px-3 py-2 text-sm ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:ring-offset-gray-800 dark:placeholder:text-gray-400 dark:focus-visible:ring-blue-400"
        disabled=""
        placeholder="Cannot edit"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Input renders input with error 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Email
    </label>
    <div
      class="relative"
    >
      <input
        class="flex h-11 w-full rounded-lg border bg-white px-3 py-2 text-sm ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:ring-offset-gray-800 dark:placeholder:text-gray-400 dark:focus-visible:ring-blue-400 border-red-500 focus-visible:ring-red-500"
        placeholder="Enter email"
      />
    </div>
    <p
      class="text-sm text-red-600 dark:text-red-400"
    >
      Email is required
    </p>
  </div>
</div>
`;

exports[`Snapshot Tests Input renders normal input 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium text-gray-700 dark:text-gray-300"
    >
      Username
    </label>
    <div
      class="relative"
    >
      <input
        class="flex h-11 w-full rounded-lg border border-gray-300 bg-white px-3 py-2 text-sm ring-offset-white file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-gray-500 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:ring-offset-gray-800 dark:placeholder:text-gray-400 dark:focus-visible:ring-blue-400"
        placeholder="Enter username"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Progress renders at 0% 1`] = `
<div>
  <div
    class="w-full "
  >
    <div
      class="w-full bg-gray-200 rounded-full h-2"
    >
      <div
        class="bg-blue-500 h-2 rounded-full transition-all duration-300 ease-out"
        style="width: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Progress renders at 50% 1`] = `
<div>
  <div
    class="w-full "
  >
    <div
      class="w-full bg-gray-200 rounded-full h-2"
    >
      <div
        class="bg-blue-500 h-2 rounded-full transition-all duration-300 ease-out"
        style="width: 50%;"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Progress renders at 100% 1`] = `
<div>
  <div
    class="w-full "
  >
    <div
      class="w-full bg-gray-200 rounded-full h-2"
    >
      <div
        class="bg-blue-500 h-2 rounded-full transition-all duration-300 ease-out"
        style="width: 100%;"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Progress renders with label shown 1`] = `
<div>
  <div
    class="w-full "
  >
    <div
      class="flex justify-between text-sm mb-1"
    >
      <span>
        Progress
      </span>
      <span>
        75
        %
      </span>
    </div>
    <div
      class="w-full bg-gray-200 rounded-full h-2"
    >
      <div
        class="bg-blue-500 h-2 rounded-full transition-all duration-300 ease-out"
        style="width: 75%;"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Select renders with options prop 1`] = `
<div>
  <div
    class="relative"
  >
    <select
      aria-label="Media type"
      class="w-full px-3 py-2 bg-white border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent pr-8 appearance-none cursor-pointer text-gray-900 dark:bg-gray-800 dark:border-gray-600 dark:text-white"
    >
      <option
        value="movie"
      >
        Movie
      </option>
      <option
        value="music"
      >
        Music
      </option>
      <option
        value="game"
      >
        Game
      </option>
    </select>
    <div
      class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
    >
      <svg
        class="h-4 w-4 text-gray-400"
        data-testid="mock-icon"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Switch renders checked 1`] = `
<div>
  <button
    aria-checked="true"
    class="relative inline-flex h-6 w-11 items-center rounded-full transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 bg-blue-600 dark:bg-blue-500"
    role="switch"
    type="button"
  >
    <span
      class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-6"
    />
  </button>
</div>
`;

exports[`Snapshot Tests Switch renders unchecked 1`] = `
<div>
  <button
    aria-checked="false"
    class="relative inline-flex h-6 w-11 items-center rounded-full transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 bg-gray-200 dark:bg-gray-700"
    role="switch"
    type="button"
  >
    <span
      class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-1"
    />
  </button>
</div>
`;
